fixed gaps for 900px

--- a/src/components/listingcardEvent/listingCard.css
+++ b/src/components/listingcardEvent/listingCard.css
@@ -20,15 +20,14 @@
 @media (max-width:900px){
   .card--listing {
     grid-template-columns: repeat(2,1fr);
-    column-gap: calc(100% - 540px);
-  
+    column-gap: calc(33% - 540px);
+    justify-items: center;
   }
   
   }
   @media (max-width:600px){
     .card--listing {
       grid-template-columns: repeat(1,1fr);
-      justify-items: center;
       column-gap: 0;
     }
     
